[Qt] Fix build with Qt 5.2 QtPosition module https://bugs.webkit.org/show_bug.cgi?id=121089

Reviewed by Simon Hausmann.

.:

QtLocation -> QtPositioning

* Source/sync.profile:

Source/WebKit:

QtLocation -> QtPositioning

* WebKit1.pri:

Source/WebKit/qt:

QtLocation -> QtPositioning

* WebCoreSupport/GeolocationClientQt.cpp:

Source/WebKit2:

QtLocation -> QtPositioning

* Target.pri:
* UIProcess/qt/WebGeolocationProviderQt.cpp:
* WebKit2.pri:

Tools:

QtLocation -> QtPositioning. Make sure we set build type before doing configure checks
that might depend on them.

* qmake/mkspecs/features/default_pre.prf:
* qmake/mkspecs/features/features.prf:

Canonical link: https://commits.webkit.org/139900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156395 268f45cc-cd09-0410-ab3c-d52691b4dbfc