Source/WebKit/WebKit1.pri
@@ -14,7 +14,7 @@ INCLUDEPATH += \
 
 have?(qtsensors):if(enable?(DEVICE_ORIENTATION)|enable?(ORIENTATION_EVENTS)): QT += sensors
 
-have?(qtlocation):enable?(GEOLOCATION): QT += location
+have?(qtpositioning):enable?(GEOLOCATION): QT += positioning
 
 contains(CONFIG, texmap): DEFINES += WTF_USE_TEXTURE_MAPPER=1
 
