Source/WebKit2/WebKit2.pri
@@ -82,7 +82,7 @@ linux-*: {
 
 have?(QTQUICK): QT += qml quick
 
-have?(qtlocation):enable?(GEOLOCATION): QT += location
+have?(qtpositioning):enable?(GEOLOCATION): QT += positioning
 
 enable?(SECCOMP_FILTERS): PKGCONFIG += libseccomp
 
